workSpace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:45:22 **** Incremental Build of configuration Debug for project timer_OC_PWM_1 ****
make -j8 all 
make: Nothing to be done for 'all'.
22:45:26 **** Incremental Build of configuration Debug for project timer_OC_PWM_1 ****
make -j8 all 
make: Nothing to be done for 'all'.
22:46:15 **** Incremental Build of configuration Debug for project timer_OC_PWM_1 ****
make -j8 all 
Building file: ../Core/Src/main.c
Invoking: MCU GCC Compiler
C:\Users\aaron\Desktop\git_udemy_MCU2\workSpace\timer_OC_PWM_1\Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DUSE_HAL_DRIVER -DSTM32F446xx -I"C:/Users/aaron/Desktop/git_udemy_MCU2/workSpace/timer_OC_PWM_1/Core/Inc" -I"C:/Users/aaron/Desktop/git_udemy_MCU2/workSpace/timer_OC_PWM_1/Drivers/STM32F4xx_HAL_Driver/Inc" -I"C:/Users/aaron/Desktop/git_udemy_MCU2/workSpace/timer_OC_PWM_1/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy" -I"C:/Users/aaron/Desktop/git_udemy_MCU2/workSpace/timer_OC_PWM_1/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"C:/Users/aaron/Desktop/git_udemy_MCU2/workSpace/timer_OC_PWM_1/Drivers/CMSIS/Include"  -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" -o "Core/Src/main.o" "../Core/Src/main.c"
Finished building: ../Core/Src/main.c
 
Building target: timer_OC_PWM_1.elf
Invoking: MCU GCC Linker
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -specs=nosys.specs -specs=nano.specs -T"../STM32F446RETx_FLASH.ld" -Wl,-Map=output.map -Wl,--gc-sections -o "timer_OC_PWM_1.elf" @"objects.list"   -lm
Finished building target: timer_OC_PWM_1.elf
 
make --no-print-directory post-build
Generating hex and Printing size information:
arm-none-eabi-objcopy -O ihex "timer_OC_PWM_1.elf" "timer_OC_PWM_1.hex"
arm-none-eabi-size "timer_OC_PWM_1.elf"
   text	   data	    bss	    dec	    hex	filename
   5084	     40	   1640	   6764	   1a6c	timer_OC_PWM_1.elf
 
22:47:18 **** Incremental Build of configuration Debug for project timer_OC_PWM_1 ****
make -j8 all 
Building file: ../Core/Src/main.c
Invoking: MCU GCC Compiler
C:\Users\aaron\Desktop\git_udemy_MCU2\workSpace\timer_OC_PWM_1\Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DUSE_HAL_DRIVER -DSTM32F446xx -I"C:/Users/aaron/Desktop/git_udemy_MCU2/workSpace/timer_OC_PWM_1/Core/Inc" -I"C:/Users/aaron/Desktop/git_udemy_MCU2/workSpace/timer_OC_PWM_1/Drivers/STM32F4xx_HAL_Driver/Inc" -I"C:/Users/aaron/Desktop/git_udemy_MCU2/workSpace/timer_OC_PWM_1/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy" -I"C:/Users/aaron/Desktop/git_udemy_MCU2/workSpace/timer_OC_PWM_1/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"C:/Users/aaron/Desktop/git_udemy_MCU2/workSpace/timer_OC_PWM_1/Drivers/CMSIS/Include"  -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" -o "Core/Src/main.o" "../Core/Src/main.c"
../Core/Src/main.c: In function 'TIM2_Init':
../Core/Src/main.c:90:22: error: 'pulse40Porcent' undeclared (first use in this function); did you mean 'pulse90Porcent'?
  tim2Channel.Pulse = pulse40Porcent*period/100;
                      ^~~~~~~~~~~~~~
                      pulse90Porcent
../Core/Src/main.c:90:22: note: each undeclared identifier is reported only once for each function it appears in
Core/Src/subdir.mk:30: recipe for target 'Core/Src/main.o' failed
make: *** [Core/Src/main.o] Error 1
22:47:56 **** Incremental Build of configuration Debug for project timer_OC_PWM_1 ****
make -j8 all 
Building file: ../Core/Src/main.c
Invoking: MCU GCC Compiler
C:\Users\aaron\Desktop\git_udemy_MCU2\workSpace\timer_OC_PWM_1\Debug
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -DUSE_HAL_DRIVER -DSTM32F446xx -I"C:/Users/aaron/Desktop/git_udemy_MCU2/workSpace/timer_OC_PWM_1/Core/Inc" -I"C:/Users/aaron/Desktop/git_udemy_MCU2/workSpace/timer_OC_PWM_1/Drivers/STM32F4xx_HAL_Driver/Inc" -I"C:/Users/aaron/Desktop/git_udemy_MCU2/workSpace/timer_OC_PWM_1/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy" -I"C:/Users/aaron/Desktop/git_udemy_MCU2/workSpace/timer_OC_PWM_1/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"C:/Users/aaron/Desktop/git_udemy_MCU2/workSpace/timer_OC_PWM_1/Drivers/CMSIS/Include"  -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" -o "Core/Src/main.o" "../Core/Src/main.c"
Finished building: ../Core/Src/main.c
 
Building target: timer_OC_PWM_1.elf
Invoking: MCU GCC Linker
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -specs=nosys.specs -specs=nano.specs -T"../STM32F446RETx_FLASH.ld" -Wl,-Map=output.map -Wl,--gc-sections -o "timer_OC_PWM_1.elf" @"objects.list"   -lm
Finished building target: timer_OC_PWM_1.elf
 
make --no-print-directory post-build
Generating hex and Printing size information:
arm-none-eabi-objcopy -O ihex "timer_OC_PWM_1.elf" "timer_OC_PWM_1.hex"
arm-none-eabi-size "timer_OC_PWM_1.elf"
   text	   data	    bss	    dec	    hex	filename
   5096	     40	   1640	   6776	   1a78	timer_OC_PWM_1.elf
 
22:48:24 **** Incremental Build of configuration Debug for project timer_OC_PWM_1 ****
make -j8 all 
make: Nothing to be done for 'all'.
